# SFORGS

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  sforgs.py
